--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: macOS-11.0
     steps:
       - uses: actions/checkout@v2
+      - name: Build WebRTC
+        run: echo "*Fake Building*"
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -24,6 +26,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - name: Build WebRTC
+        run: echo "*Fake Building*"
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -33,6 +37,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - name: Build WebRTC
+        run: echo "*Fake Building*"
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
