--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,12 @@ jobs:
   build-apple:
     runs-on: macOS-11.0
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository code
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+      - name: Checkout LFS objects
+          run: git lfs checkout
       - name: Build WebRTC
         run: echo "*Fake Building*"
       - name: Upload Artifact
@@ -25,7 +30,12 @@ jobs:
   build-linux:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository code
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+      - name: Checkout LFS objects
+        run: git lfs checkout
       - name: Build WebRTC
         run: echo "*Fake Building*"
       - name: Upload Artifact
@@ -36,7 +46,12 @@ jobs:
   build-android:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository code
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+      - name: Checkout LFS objects
+          run: git lfs checkout
       - name: Build WebRTC
         run: echo "*Fake Building*"
       - name: Upload Artifact
