--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,27 +59,12 @@ jobs:
         with:
           name: webrtc.android-release.tar.gz
           path: lib/android/release/webrtc.tar.gz
-#  create-release:
-#    name: Create Release
-#    if: contains(github.ref, 'tags/m')
-#    needs: [build-windows, build-apple, build-linux]
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1.0.0
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: ${{ github.ref }}
-#          release_name: Release ${{ github.ref }}
-#          draft: false
-#          prerelease: false
-#      - name: Output upload url
-#        shell: bash
-#        run: echo "UPLOAD_URL='${{ steps.create_release.outputs.upload_url }}'" > create-release.env
-#      - name: Upload create-release Environment
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: create-release.env
-#          path: create-release.env
+  create-release:
+    name: Create Release
+    needs: [build-android, build-apple, build-linux]
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
+      - name: List Artifacts
+        run: tree .
